01-flux/gilfoyle/apps/pocketid/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pocket-id
  namespace: pocketid
spec:
  serviceName: "pocket-id"
  replicas: 1 
  selector:
    matchLabels:
      app: pocket-id
  template:
    metadata:
      labels:
        app: pocket-id
    spec:
      containers:
        - name: pocket-id
          image: ghcr.io/pocket-id/pocket-id:v1.16.0
          ports:
            - containerPort: 1411
              name: http
          
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "100m"

          volumeMounts:
            - name: data
              mountPath: /app/data

          livenessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 10
            periodSeconds: 90
            timeoutSeconds: 5
            failureThreshold: 2
          
          readinessProbe:
            exec:
              command:
                - /app/pocket-id
                - healthcheck
            initialDelaySeconds: 5
            periodSeconds: 10

  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: "local-path-critical" 
        resources:
          requests:
            storage: 10Gi
