01-flux/gilfoyle/apps/pocketid/http-proute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  parentRefs:
    - name: gw-external
      namespace: envoy-gateway
  hostnames:
    - "pocketid.themiple.ru"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pocket-id
          port: 1411
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
