01-flux/gilfoyle/apps/pocketid/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pocketid
  namespace: pocketid
spec:
  parentRefs:
    - name: gw-external
      namespace: envoy-gateway
  hostnames:
    - "pocketid.themiple.ru"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: pocket-id
          port: 1411
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
      - type: RequestHeaderModifier
        requestHeaderModifier:
          set:
          - name: "x-real-ip"
            value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
