01-flux/gilfoyle/apps/pocketid/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocketid
  namespace: pocketid
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - "pocketid.themiple.ru"
      secretName: pocketid-tls
  rules:
    - host: "pocketid.themiple.ru"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  number: 1411
